<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_meeting"
    tools:context=".ui.add.AddMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_meeting_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nouvelle_reunion"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_name_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_title_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_name_tiet"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="#D82C2C" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_location_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_name_til">

            <AutoCompleteTextView
                android:id="@+id/add_meeting_location_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ad_meeting_subject_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_meeting_location_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ad_meeting_subject_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:inputType="text"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_input_participant_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_person_add_alt_1_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_time_picker_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_input_participant_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789qwertzuiopasdfghjklyxcvbnm@."
                android:hint="@string/participants"
                android:inputType="textEmailAddress|textNoSuggestions|textFilter"
                android:maxLines="1"
                android:paddingBottom="30dp"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/add_meeting_participants_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/add_participants"
            android:ems="10"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/add_meeting_input_participant_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/add_meeting_input_participant_layout"
            app:layout_constraintTop_toTopOf="@+id/add_meeting_input_participant_layout" />

        <ImageButton
            android:id="@+id/refresh_meeting_participants_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/delete_participants"
            android:ems="10"
            android:src="@drawable/baseline_refresh_24"
            app:layout_constraintBottom_toBottomOf="@+id/add_meeting_input_participant_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_meeting_participants_button"
            app:layout_constraintTop_toTopOf="@+id/add_meeting_input_participant_layout" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_meeting_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:contentDescription="@string/save"
            android:enabled="false"
            android:text="@string/save"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_participants_list" />

        <ImageButton
            android:id="@+id/add_meeting_date_picker_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/select_date"
            android:ems="10"
            android:src="@drawable/baseline_calendar_month_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_meeting_subject_til" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_meeting_date_picker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/date"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ad_meeting_subject_til" />

        <ImageButton
            android:id="@+id/add_meeting_time_picker_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/select_time"
            android:ems="10"
            android:inputType="time"
            android:src="@drawable/baseline_access_time_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_picker_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_meeting_time_picker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="@android:color/black"
            android:hint="@string/hour"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_picker_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_meeting_participants_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:hint="@string/no_participants_saved"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_input_participant_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>